modules/kyverno/policies/quote-server-max-pods.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: quote-server-max-pods
  annotations:
    policies.kyverno.io/title: Require Single Replicas
    policies.kyverno.io/category: quote-serever
    policies.kyverno.io/description: >-
      Quote server can only run 1 replica.
spec:
  validationFailureAction: enforce
  rules:
    - name: quote-server-max-pods
      match:
        resources:
          name: "quote-server-grpc"
          # selector:
          #   matchLabels:
          #     app: "quote"
          #     tier: "production"
          #     component: "server-http"
          kinds:
            - Deployment
      validate:
        message: "Quote Server can only run 1 replica!"
        pattern:
          spec:
            replicas: "1"
